# intel-aero-samples

./: .gitignore  README.md
conf/: layer.conf
recipes-samples/sample-apps/: intel-aero-image.bbappend  sample-apps.bb
ros-examples/: .clang-format
ros-examples/src/aero_flight_modes/: CMakeLists.txt
ros-examples/src/aero_fly_mission/: CMakeLists.txt
ros-examples/src/aero_fly_mission/src/: aero_fly_mission_node.cpp
ros-examples/src/aero_offboard_ctrl/: package.xml
ros-examples/src/aero_offboard_ctrl/src/: aero_offboard_ctrl_node.cpp
ros-examples/src/aero_offboard_velocity/: CMakeLists.txt  package.xml
ros-examples/src/aero_offboard_velocity/launch/: aero_offboard_velocity.launch
ros-examples/src/aero_offboard_velocity/src/: aero_offboard_velocity_node.cpp
ros-examples/src/aero_takeoff_land/: CMakeLists.txt
ros-examples/src/aero_takeoff_land/src/: aero_takeoff_land_node.cpp
ros-examples/src/aero_telemetry_simple/: CMakeLists.txt
ros-examples/src/mavros_fly_mission/src/: mavros_fly_mission_node.cpp
ros-examples/src/mavros_telemetry_modes/: CMakeLists.txt  package.xml
